Update Candy Crush link to external URL

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ footer { margin:30px 0; opacity:0.6; font-size:0.9rem; }
 <div id="santa"></div>
 
 <section class="game-grid">
-    <a class="game-card" data-url="newgames/candycrush/">Candy Crush</a>
+    <a class="game-card" data-url="https://heavenlydog3.deno.dev/html/footballbros/">Candy Crush</a>
     <a class="game-card" data-url="1v1lol/">1v1lol</a>
     <a class="game-card" data-url="tap/">Tap</a>
     <a class="game-card" data-url="newgames/stackCode/">Stack</a>
